--- a/_posts/2022-11-28-start.md
+++ b/_posts/2022-11-28-start.md
@@ -9,9 +9,9 @@ categories: notes
 
 I start to make something with this space! 🚀
 
-I plan to write down posts, probably something in between actual blogposts and _tidy_ personal notes. The _why_ of it is beautifully exemplified in More To That's [The Release Ratio](https://moretothat.com/release-ratio/). _Bref_: I consume a lot of online content and sparingly elaborate on it. When I do so, it is by taking messy notes or sending Telegram messages to myself. This space starts as a way to force me to write tidy notes about things I'm interested in, and eventually write blogposts if I think there is something interesting I can produce.
+I plan to write down posts, probably something in between actual blogposts and *tidy* personal notes. The _why_ of it is beautifully exemplified in More To That's [The Release Ratio](https://moretothat.com/release-ratio/). *Bref*, I consume a lot of online content and sparingly elaborate on it. When I do so, it is by taking messy notes or sending Telegram messages to myself. This space starts as a way to force me to write tidy notes about things I'm interested in, and eventually write blogposts if I think there is something interesting I can produce.
 
-For those of you that write code, this effort is analogous to forcing yourself to push any piece of code you write to GitHub: nobody will eventually read it, but knowing that everybody possibly ___could___ is a strong enough incentive to produce something my future self could rely on, and that is all in one place.
+For those of you that write code, this effort is analogous to forcing yourself to push any piece of code you write to GitHub: nobody will eventually read it, but knowing that everybody possibly ***could*** is a strong enough incentive to produce something my future self could rely on, and that is all in one place.
 
 Let's see how that works out.
 
