try hidden flag in posts

--- a/_posts/2022-12-10-bread.md
+++ b/_posts/2022-12-10-bread.md
@@ -5,6 +5,7 @@ date:   2022-12-10 8:00:00
 description: every time I find a bread recipe I like, I lose it
 tags: note recipe
 categories: notes recipes
+hidden: true
 ---
 
 Sometimes I make bread at home. Each new loaf is a step toward the best values for the parameters `{flour, water, salt, sugar, yeast, temperature}` that maximize the reward I get by eating it. Then, I stop doing bread for weeks and I just forget the recipe.
