--- a/_posts/2022-12-10-bread.md
+++ b/_posts/2022-12-10-bread.md
@@ -27,7 +27,7 @@ This post serves as the place where to find my bread recipe when I will need it.
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/bread/1.jpeg" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/bread/1.jpg" class="img-fluid rounded z-depth-1" %}
     </div>
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.html path="assets/img/bread/0.jpg" class="img-fluid rounded z-depth-1" %}
@@ -82,13 +82,13 @@ For the quantity of sugar and salt indicated above, I find that to obtain a nice
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/bread/3.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.html path="assets/img/bread/3.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.html path="assets/img/bread/4.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/bread/6.jpeg" class="img-fluid rounded z-depth-1" zoomable=true %}
+        {% include figure.html path="assets/img/bread/6.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
     <div class="col-sm mt-3 mt-md-0">
         {% include figure.html path="assets/img/bread/7.jpg" class="img-fluid rounded z-depth-1" zoomable=true %}
