make tables in latex instead of markdown

--- a/_posts/2022-11-28-start.md
+++ b/_posts/2022-11-28-start.md
@@ -3,7 +3,7 @@ layout: post
 title:  I start posting!
 date:   2022-11-28 16:40:16
 description: starting a blog, or maybe just a set publicly-available personal notes
-tags: note
+tags: start
 categories: notes
 ---
 
