--- a/_posts/2022-12-10-bread.md
+++ b/_posts/2022-12-10-bread.md
@@ -3,8 +3,8 @@ layout: post
 title:  my bread recipe 🍞
 date:   2022-12-10 8:00:00
 description: every time I find a bread recipe I like, I lose it
-tags: note recipe
-categories: notes recipes
+tags: recipe food
+categories: recipes
 hidden: true
 ---
 
@@ -39,22 +39,16 @@ This post serves as the place where to find my bread recipe when I will need it.
 Unfortunately, each country has its particular way of classifying flour types, from the more scientific to the more qualitative ones. 
 Below is the best conversion table I could put together by scraping the web, hope this can be useful to you fellow expat!
 
-| #|ASH     | PROTEIN | ITALY    | UK                          |  US          | FRANCE |
-|:--:|:--------:| :-------: | :-------:  | :---------------------------: | :-----------:  | :------: |
-|1.|~ 0.4%  |~ 9%     |   tipo 00| soft / patent               | pastry       |      45|
-|2.|~ 0.55% | ~11%    |   tipo  0| plain / white / strong wheat| all-purpose  |      55|
-|3.|~ 0.8%  | ~14%    |   tipo  1| hard / lightbrown           | high-gluten  |      80|
-|4.|~ 1%    | ~15%    |   tipo  2| very hard / brown           | first clear  |     110|
-|5.|`>` 1.5%| ~ 13%   | integrale| wholemeal                   | whole wheat  |     150|
-
-| #| SWITZERLAND         | AUSTRIA                       | GERMANY     | NETHERLANDS   |
-|:--:|:--------------------: | :-----------------------------: | :-----------: | :------------:  |
-|1.| Spezial, speciale   | W480 / Glatt                  | 405         | zeeuwse bloem |
-|2.|Weiss, bianca        | W480 / Griffig / Doppelgriffig| 550         | patentbloem   |
-|3.|Halbweiss, semibianca| W700                          | 812         | tarwebloem    |
-|4.|Ruch, bigia          | W1600                         | 1050        | gebuilde bloem|
-|5.|Vollkorn, integrale  | W1800                         | 1600/1700   | volkorenmeel  |
-
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/bread/table-flour-types-1.png" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
+<div class="row mt-3">
+    <div class="col-sm mt-3 mt-md-0">
+        {% include figure.html path="assets/img/bread/table-flour-types-2.png" class="img-fluid rounded z-depth-1" %}
+    </div>
+</div>
 
 For making bread, I use *farina di tipo 1*, #3 in the conversion table.
 
@@ -120,7 +114,7 @@ For the quantity of sugar and salt indicated above, I find that to obtain a nice
 9. Remove the *metal thing* from the bread.
 10. Make a nicely stuffed *panino*! 😋
 
-***Note:*** even if the bread loses its freshness in a couple of days, it's still great for toasts for a week or so!
+***Note:*** even if the bread loses its freshness in a couple of days, it's still great for toasted sandwiches 🥪 for a week or so!
 
 I leave you with some *panini* pictures from the tops of the Swiss Alps 🇨🇭⛰️!
 
