add zoomable to tables

--- a/_posts/2022-12-10-bread.md
+++ b/_posts/2022-12-10-bread.md
@@ -41,12 +41,12 @@ Below is the best conversion table I could put together by scraping the web, hop
 
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/bread/table-flour-types-1.png" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/bread/table-flour-types-1.png" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
 </div>
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        {% include figure.html path="assets/img/bread/table-flour-types-2.png" class="img-fluid rounded z-depth-1" %}
+        {% include figure.html path="assets/img/bread/table-flour-types-2.png" class="img-fluid rounded z-depth-1" zoomable=true %}
     </div>
 </div>
 
