--- a/_posts/2022-12-11-bread.md
+++ b/_posts/2022-12-11-bread.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title:  my bread recipe 🍞
-date:   2022-12-10 8:00:00
+date:   2022-12-11 8:00:00
 description: every time I find a bread recipe I like, I lose it
 tags: recipe food
 categories: recipes
-hidden: true
+hidden: false
 ---
 
 Sometimes I make bread at home. Each new loaf is a step toward the best values for the parameters `{flour, water, salt, sugar, yeast, temperature}` that maximize the reward I get by eating it. Then, I stop doing bread for weeks and I just forget the recipe.
